--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,8 @@ jobs:
         run: python takescreenshot.py
       - name: create compressed zip file from png files
         run: tar -jcvf png.tar.bz2 *.png
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-artifact
+          path: png.tar.bz2
